<?xml version="1.0"?>
<package>
  <name>apriltags</name>
  <version>0.1.2</version>
  <description>A catkin version of the C++ apriltags library</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Michael Kaess</author>
  <author>Hordur Johannson</author>

  <license>LGPL</license>

  <url type="website">http://people.csail.mit.edu/kaess/apriltags/</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/apriltags_ros/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/apriltags_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>opencv3</build_depend>
  <run_depend>eigen</run_depend>
  <run_depend>opencv3</run_depend>


  <export>
  </export>
</package>
